--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -21,7 +21,8 @@
 .price .price-item {
   display: inline-block;
   margin: 0 1rem 0 0;
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .price__regular .price-item--regular {
