--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -2,7 +2,7 @@
   display: flex;
   position: relative;
   line-height: 1;
-  padding: 1.5rem 0;
+  padding: 1.2rem 0;
 }
 
 .accordion .summary__title {
@@ -22,8 +22,6 @@
 .accordion {
   margin-top: 2.5rem;
   margin-bottom: 0;
-  border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
 }
 
 .accordion__title {
@@ -32,6 +30,10 @@
   min-height: 1.6rem;
   margin: 0;
   word-break: break-word;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+
 }
 
 .accordion .icon-accordion {
@@ -47,12 +49,27 @@
 }
 
 .accordion__content {
-  margin-bottom: 1.5rem;
   word-break: break-word;
   overflow-x: auto;
-  padding: 0 0.6rem;
+  max-height: 0;
+  animation: slideUp 2s;
+}
+
+.accordion details[open] .accordion__content {
+  max-height: 100%;
+  animation: slideDown 2s;
 }
 
 .accordion__content img {
   max-width: 100%;
+}
+
+@keyframes slideDown {
+  0% {max-height: 0;}
+  100% {max-height: 100%;}
+}
+
+@keyframes slideUp {
+  0% {max-height: 100%;}
+  100% {max-height: 0;}
 }
