--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -66,10 +66,13 @@
     >
       {%- if product.selected_or_first_available_variant.featured_media != null -%}
         {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
+        {% assign option_color = featured_media.alt | split: '-' %}
         <li
           id="Slide-{{ section.id }}-{{ featured_media.id }}{{ id_append }}"
           class="product__media-item grid__item slider__slide is-active{% if single_media_visible %} product__media-item--single{% endif %}{% if featured_media.media_type != 'image' %} product__media-item--full{% endif %}{% if section.settings.hide_variants and variant_images contains featured_media.src %} product__media-item--variant{% endif %}"
           data-media-id="{{ section.id }}-{{ featured_media.id }}"
+          data-media-color="{{ option_color[1] }}"
+          data-current-media="true"
         >
           {%- assign media_position = 1 -%}
           {% render 'product-thumbnail',
@@ -90,10 +93,14 @@
       {%- endif -%}
       {%- for media in product.media -%}
         {%- unless media.id == product.selected_or_first_available_variant.featured_media.id -%}
+          {% assign option_color = media.alt | split: '-' %}
+          {% assign current_option_color = product.selected_or_first_available_variant.featured_media.alt | split: '-' %}
           <li
             id="Slide-{{ section.id }}-{{ media.id }}{{ id_append }}"
             class="product__media-item grid__item slider__slide{% if single_media_visible %} product__media-item--single{% endif %}{% if product.selected_or_first_available_variant.featured_media == null and forloop.index == 1 %} is-active{% endif %}{% if media.media_type != 'image' %} product__media-item--full{% endif %}{% if section.settings.hide_variants and variant_images contains media.src %} product__media-item--variant{% endif %}"
             data-media-id="{{ section.id }}-{{ media.id }}"
+            data-media-color="{{ option_color[1] }}"
+            data-current-media="{% if option_color[1] == current_option_color[1] %}true{% else %}false{% endif %}"
           >
             {%- liquid
               assign media_position = media_position | default: 0 | plus: 1
