--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -38,7 +38,7 @@ slider-component {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    scroll-padding-left: 1.5rem;
+    scroll-padding-left: 0;
     -webkit-overflow-scrolling: touch;
     margin-bottom: 1rem;
   }
