--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -4,4 +4,18 @@
 
 .related-products__heading {
   margin: 0 0 3rem;
+  text-align: center;
+  font-size: 60px;
+}
+
+.related-products.page-width {
+  max-width: 100%;
+}
+
+@media (max-width: 749px) {
+  .related-products__heading {
+    font-size: 36px;
+    margin-bottom: 1.6rem;
+    padding-bottom: 1.6rem;
+  }
 }
