--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -720,7 +720,7 @@ a.product__text {
 }
 
 .product-media-modal {
-  background-color: rgb(var(--color-background));
+  background-color: transparent;
   height: 100%;
   position: fixed;
   top: 0;
@@ -746,7 +746,10 @@ a.product__text {
 .product-media-modal__content {
   max-height: 100vh;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  cursor: default;
 }
 
 .product-media-modal__content > *:not(.active),
@@ -755,10 +758,6 @@ a.product__text {
 }
 
 @media screen and (min-width: 750px) {
-  .product-media-modal__content {
-    padding-bottom: 2rem;
-  }
-
   .product-media-modal__content > *:not(.active) {
     display: block;
   }
@@ -800,20 +799,20 @@ a.product__text {
 }
 
 .product-media-modal__toggle {
-  background-color: rgb(var(--color-background));
-  border: 0.1rem solid rgba(var(--color-foreground), 0.1);
+  background-color: transparent;
+  border: none;
   border-radius: 50%;
-  color: rgba(var(--color-foreground), 0.55);
+  color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   right: 2rem;
-  padding: 1.2rem;
   position: fixed;
   z-index: 2;
   top: 2rem;
   width: 4rem;
+  padding: 0;
 }
 
 .product-media-modal__content .deferred-media {
@@ -822,7 +821,7 @@ a.product__text {
 
 @media screen and (min-width: 750px) {
   .product-media-modal__content {
-    padding: 2rem 11rem;
+    padding: 0 11rem;
   }
 
   .product-media-modal__content > * {
@@ -834,26 +833,18 @@ a.product__text {
   }
 
   .product-media-modal__toggle {
-    right: 5rem;
-    top: 2.2rem;
+    right: 1rem;
+    top: 1rem;
   }
 }
 
 @media screen and (min-width: 990px) {
   .product-media-modal__content {
-    padding: 2rem 11rem;
+    padding: 0 11rem;
   }
 
   .product-media-modal__content > * + * {
     margin-top: 1.5rem;
-  }
-
-  .product-media-modal__content {
-    padding-bottom: 1.5rem;
-  }
-
-  .product-media-modal__toggle {
-    right: 5rem;
   }
 }
 
@@ -864,7 +855,7 @@ a.product__text {
 .product-media-modal__toggle .icon {
   height: auto;
   margin: 0;
-  width: 2.2rem;
+  width: 3rem;
 }
 
 /* Product popup */
@@ -1647,12 +1638,12 @@ a.product__text {
   text-decoration: line-through;
 }
 
-.product__media-item {
-  display: none;
+[data-current-media="false"] {
+  display: none !important;
 }
 
 [data-current-media="true"] {
-  display: block;
+  display: block !important;
   animation: fadeIn 2s;
 }
 
@@ -1690,4 +1681,45 @@ a.product__text {
 
 .product__media-wrapper .slider-button {
   display: none;
+}
+
+.product-media-modal__content .swiper-wrapper {
+  display: flex;
+  height: 100vh;
+}
+
+.product-media-modal__content .swiper-button-next, .product-media-modal__content .swiper-button-prev {
+  transform: scale3d(0.5, 0.5, 0.5);
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.product-media-modal__content .swiper-slide {
+  height: 100%;
+  background-color: transparent;
+}
+
+.product-media-modal__content .swiper-pagination {
+  display: none;
+}
+
+.product-media-modal-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: contain;
+  object-position: center;
+  background-color: transparent;
+}
+
+.product__media-wrapper .slider-buttons {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
 }
