--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -13,10 +13,12 @@
       variant_image: true
     %}
 {% endcomment %}
-
+{% if slider %}
+  <div class="swiper-slide">
+{% endif %}
 {%- if media.media_type == 'image' -%}
   <img
-    class="global-media-settings global-media-settings--no-shadow{% if variant_image %} product__media-item--variant{% endif %}"
+    class="global-media-settings product-media-modal-img global-media-settings--no-shadow{% if variant_image %} product__media-item--variant{% endif %}"
     srcset="{%- if media.preview_image.width >= 550 -%}{{ media.preview_image | image_url: width: 550 }} 550w,{%- endif -%}
             {%- if media.preview_image.width >= 1100 -%}{{ media.preview_image | image_url: width: 1100 }} 1100w,{%- endif -%}
             {%- if media.preview_image.width >= 1445 -%}{{ media.preview_image | image_url: width: 1445 }} 1445w,{%- endif -%}
@@ -99,3 +101,6 @@
     </deferred-media>
   {%- endif -%}
 {%- endif -%}
+{% if slider %}
+  </div>
+{% endif %}
