--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -1,7 +1,8 @@
 .banner {
   display: flex;
   position: relative;
-  flex-direction: column;
+  flex-wrap: nowrap !important;
+  gap: 0;
 }
 
 .banner__box {
@@ -64,19 +65,15 @@
 }
 
 @media screen and (min-width: 750px) {
-  .banner {
-    flex-direction: row;
-  }
-
-  .banner--small:not(.banner--adapt) {
+  .banner--small:not(.banner--adapt), .banner--small:not(.banner--adapt) .slideshow__slide, .banner--small:not(.banner--adapt) .slideshow__text-wrapper {
     min-height: 42rem;
   }
 
-  .banner--medium:not(.banner--adapt) {
+  .banner--medium:not(.banner--adapt), .banner--medium:not(.banner--adapt) .slideshow__slide, .banner--medium:not(.banner--adapt) .slideshow__text-wrapper {
     min-height: 56rem;
   }
 
-  .banner--large:not(.banner--adapt) {
+  .banner--large:not(.banner--adapt), .banner--large:not(.banner--adapt) .slideshow__slide, .banner--large:not(.banner--adapt) .slideshow__text-wrapper {
     min-height: 82rem;
   }
 
@@ -459,4 +456,28 @@
     color: #000000;
     margin-top: 2rem;
   }
+}
+
+.banner-swiper .slideshow__slide {
+  height: 100%;
+}
+
+.banner-swiper .banner-swiper-pagination {
+  bottom: 40px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+}
+
+.banner-swiper-pagination .swiper-pagination-bullet {
+  background-color: #ffffff;
+  opacity: 0.5;
+  margin: 0 4px;
+  width: 8px;
+  height: 8px;
+}
+
+.banner-swiper-pagination .swiper-pagination-bullet-active {
+  opacity: 1;
 }
