--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -98,8 +98,8 @@
             </div>
           </div>
         {%- endif -%}
-        <div class="card__content">
-          <div class="card__information" data-product-id="{{ card_product.id }}">
+        <a class="card__content" href="{{ card_product.url }}">
+          <div class="card__information">
             <h3
               class="card__heading"
               {% if card_product.featured_media == null and settings.card_style == 'standard' %}
@@ -133,7 +133,7 @@
               </span>
             {%- endif -%}
           </div>
-        </div>
+        </a>
       </div>
       <div class="card__content">
         <div class="card__information" data-product-id="{{ card_product.id }}">
