--- a/snippets/product-media-modal.liquid
+++ b/snippets/product-media-modal.liquid
@@ -26,17 +26,19 @@
       {% render 'icon-close' %}
     </button>
 
-    {% assign current_color = product.selected_or_first_available_variant.featured_media.alt | split: '-' %}
+    {% assign has_color = false %}
     {% for option in product.options_with_values %}
       {% if option.name == 'Color' %}
+        {% assign has_color = true %}
         {% for value in option.values %}
+          {% assign color_name = product.title | append: '-' | append: value  %}
           <div
             class="product-media-modal__content color-background-1 gradient product-media-modal__swiper--{{ forloop.index0 }}"
             role="document"
             aria-label="{{ 'products.modal.label' | t }}"
             tabindex="0"
-            data-media-color="{{ value }}"
-            data-current-media="{% if value == current_color[1] %}true{% else %}false{% endif %}"
+            data-media-color="{{ color_name }}"
+            data-current-media="{% if color_name == product.selected_or_first_available_variant.featured_media.alt %}true{% else %}false{% endif %}"
           >
             <div class="swiper-wrapper">
               {%- liquid
@@ -71,5 +73,41 @@
         {% endfor %}
       {% endif %}
     {% endfor %}
+    {% unless has_color %}
+      <div
+        class="product-media-modal__content color-background-1 gradient product-media-modal__swiper--0"
+        role="document"
+        aria-label="{{ 'products.modal.label' | t }}"
+        tabindex="0"
+        data-media-color="{{ product.selected_or_first_available_variant.media.alt }}"
+        data-current-media="true"
+      >
+        <div class="swiper-wrapper">
+          {%- liquid
+            if product.selected_or_first_available_variant.featured_media != null
+              assign media = product.selected_or_first_available_variant.featured_media
+              render 'product-media', media: media, loop: section.settings.enable_video_looping, variant_image: section.settings.hide_variants, slider: true
+            endif
+          -%}
+  
+          {%- for media in product.media -%}
+            {%- liquid
+              if section.settings.hide_variants and variant_images contains media.src or variant_images contains media.id
+                assign variant_image = true
+              else
+                assign variant_image = false
+              endif
+  
+              unless media.id == product.selected_or_first_available_variant.featured_media.id
+                render 'product-media', media: media, loop: section.settings.enable_video_looping, variant_image: variant_image, slider: true
+              endunless
+            -%}
+          {%- endfor -%}
+        </div>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
+    {% endunless %}
   </div>
 </product-modal>
